GUI update with comparator